[package]
name = "thium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pqc_dilithium = { version =  "0.2.0",  features = ["mode5"] }
base64 = "0.22.0"
sha2 = "0.10"
rand = "0.8.5"
ripemd = "0.1.3"
primitive-types = "0.12.2"
sled = "0.34.7"
hex = "0.4.3"
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.53.2", features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }